Updated HTML & CSS for temp icom img. Javascript not showing searched city day/date/time. Fixed code

--- a/src/styles.css
+++ b/src/styles.css
@@ -70,6 +70,7 @@ main {
 .current-weather-icon-image {
   width: 50px;
   height: 50px;
+  margin-bottom: 28px;
 }
 
 .current-temperature-unit {
